--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.zorlu.gittagtest.MainActivity"
-    android:background="#d97a7a">
+    android:background="#96dfbd">
 
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:text="VERSION 1"
+        android:text="VERSION 2"
         android:textSize="50dp"
         android:gravity="center_horizontal"
         android:paddingTop="60dp"
-        android:textColor="#58dfad" />
+        android:textColor="#713614" />
 </RelativeLayout>
