--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.zorlu.gittagtest.MainActivity"
-    android:background="#db5329">
+    android:background="#a5cbdd">
 
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:text="VERSION 3"
+        android:text="VERSION 4"
         android:textSize="50dp"
         android:gravity="center_horizontal"
         android:paddingTop="60dp"
-        android:textColor="#faed3c" />
+        android:textColor="#a734ff" />
 </RelativeLayout>
